# test

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  COMPLETION_GUIDE.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_AUDIT_AND_FIX.md  CONTINUE_FROM_HERE.md  Dockerfile  FINAL_STATUS.md  IMPLEMENTATION_ROADMAP.md  MISSING_FILES_TODO.md  Makefile  PHASE_2_IMPLEMENTATION_COMPLETE.md  PHASE_3_2_COMPLETE.md  PHASE_3_2_START.md  PHASE_3_PROGRESS.md  PROJECT_COMPLETE_CODE.md  README.md  SETUP_INSTRUCTIONS.md  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt
.github/workflows/: linting.yml  tests.yml
PHASE_3_1_COMPLETE.md/: PHASE_3_1_COMPLETE.md
apps/: README.md
apps/mobile/android/: README.md
apps/mobile/ios/: README.md
frontend/: .gitignore  index.html  package.json  vite.config.js
frontend/src/: App.tsx  index.css
frontend/src/pages/: CreateCV.tsx  Dashboard.tsx  EditCV.tsx  Login.tsx  Register.tsx  ViewCV.tsx
frontend/src/utils/: api.ts
libs/cv/: requirements.txt  setup.py
libs/ml/: requirements.txt  setup.py
services/: worker.py
services/api/: .env.example  Dockerfile  Makefile  __init__.py  alembic.ini  celery_config.py  config.py  conftest.py  logging_config.py  main.py  pytest.ini  requirements-dev.txt  requirements.txt  schemas.py  utils.py  worker.py
services/api/alembic/: env.py
services/api/database/: config.py  models.py
services/api/models/: __init__.py  database.py  image.py  job.py  user.py
services/api/routers/: __init__.py  (+6 more)
services/worker/: Dockerfile  __init__.py  requirements.txt  tasks.py
(+14 files in other folders)
