[tool.poetry]
name = "color-correction-system"
version = "1.0.0"
description = "Production color correction system with RAW processing"
authors = ["hatim2005 <hatim@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0"
opencv-contrib-python = "^4.9.0"
numpy = "^1.26.2"
scipy = "^1.11.4"
rawpy = "^0.19.0"
colour-science = "^0.4.4"
PyQt6 = "^6.6.1"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
celery = {extras = ["redis"], version = "^5.3.4"}
redis = "^5.0.1"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^2.5.3"
torch = "^2.1.2"
torchvision = "^0.16.2"
pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.1"
ruff = "^0.1.9"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
